--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner">
       <div class="item active">
-          <img src="/assets/images/echo.jpg" class="img-responsive">
+          <img src="./assets/images/echo.jpg" class="img-responsive">
       </div>
       <div class="item">
-          <img src="/assets/images/tote.jpg" class="img-responsive">
+          <img src="./assets/images/tote.jpg" class="img-responsive">
       </div>
       <div class="item">
-          <img src="/assets/images/prime.jpg" class="img-responsive">
+          <img src="./assets/images/prime.jpg" class="img-responsive">
       </div>
   </div>
   <span class="left carousel-control" data-target="#Carousel" data-slide="prev">
