--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -55,7 +55,7 @@
     			Try<br><b>Prime</b> <span class="caret"></span>
     		</button>
     		<ul class="rocketman dropdown-menu pull-right">
-    			<img src="/assets/images/rocketman.png">
+    			<img src="./assets/images/rocketman.png">
     		</ul>
     	</div>
     	<!-- Bottom Nav Fourth Button -->
