--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
 		<img src="https://images-na.ssl-images-amazon.com/images/G/01/airstream/upnav/C/C_latest_1x._CB518726901_.jpg" alt="banner">
 	</div>
 	<div class="row">
-			<img src="/assets/images/amazonLogo.png">
+			<img src="./assets/images/amazonLogo.png">
 			<form>
 		    <div class="select">
 		      <select>
