--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -50,7 +50,7 @@
 
   	<!-- Countries Section -->
   	<section class="mid-country">
-  		<img src="/assets/images/amazon.png">
+  		<img src="./assets/images/amazon.png">
   		<div>
   			<a>Australia</a>
   			<a>Brazil</a>
