carousel control visibility

--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -8,6 +8,10 @@
 }
 span {
   cursor: pointer;
+  visibility: hidden;
+}
+#Carousel:hover span {
+  visibility: visible;
 }
 img {
   min-width: 1500px;
