--- a/src/app/products/movies/movies.component.css
+++ b/src/app/products/movies/movies.component.css
@@ -21,3 +21,10 @@ img {
 .glyphicon-chevron-right {
   right: 10%;
 }
+.carousel-control {
+  cursor: pointer;
+  visibility: hidden;
+}
+.carousel:hover .carousel-control {
+  visibility: visible;
+}
